--- a/coding/Backend/customer/package.json
+++ b/coding/Backend/customer/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.1",
-    "nodemailer": "^6.4.11"
+    "nodemailer": "^6.4.11",
+    "uuid": "^8.3.0"
   }
 }
