--- a/Tushar/backend/src/main/resources/application.properties
+++ b/Tushar/backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 server.servlet.context-path=/project
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false
-spring.datasource.username=DAC
-spring.datasource.password=DAC
+spring.datasource.username=dac
+spring.datasource.password=dac
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
