--- a/new-backend/java-backend/backend/src/main/resources/application.properties
+++ b/new-backend/java-backend/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #context path default value : empty
 #server.servlet.context-path=/GMS
 #DB properties
-spring.datasource.url=jdbc:mysql://localhost:3306/d2?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false
 spring.datasource.username=dac
 spring.datasource.password=dac
 # JPA properties
